# django-react-chat

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
chat/: pusher.py  tests.py  urls.py  views.py
config/: settings.py  urls.py
frontend/: .env.example  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
